2007-06-13  Maximilien Cuony
	* Find the news mails content in cgmail (but a bit experimental)

2007-06-12  Maximilien Cuony
	* Autoselect the recipants for crypt in gmail !

2007-06-12  Achraf cherti
	* some orthography/grammar errors are fixed in the french/english locales.
	* translation of some untranslated strings in en-US locale (it was in French)

2007-06-11  Maximilien Cuony
	* Auto detect new version and propose update for FireGPG.

2007-06-09  Maximilien Cuony
	* 0.4.1 packed, and uploaded to the server !
	* de, pl, es, nl, pt, it updated too.
	* Updated locates

2007-06-08  Maximilien Cuony
	* Add 'encrypt to myself' option
	* Fix a bug with decrypting message with several recipients.
	* Fix a bug with private select key.
	* Improve performances : init Gpg only when use it !

2007-06-07  Maximilien Cuony
	* Fixed proble with Options' tabs.
	* BYEBYE WINDOWS CONSOLE ! Use a program from Alexander Avdonin.
	* Try to detect gpg on windows.
	* Added pt_BR translation
	* Some english corrections from Scott Morrison <scott@math.berkeley.edu>
	* Update locate for ES.

2007-06-06  Achraf cherti
	* declaration of some undeclared variables.
	* encryption with several recipients.

2007-06-06  Maximilien Cuony
	* Sending a anonymous ping to FireGPG for stat on updates and Install.
	* Options for select gmail's butons.
	* Option to trun of 'No sign found [...]'
	* New option windows (but with problems)
	* Autodetect version for the 'whatisnew'

2007-06-05  Maximilien Cuony
	* 0.4 packed, and uploaded to the server !
	* Added new strings to locates

2007-06-04  Maximilien Cuony
	* Solved encoding problem !!!!! :).
	* What is new windows.
	* Editor works perfectly !

2007-06-03  Maximilien Cuony
	* Begining of transform showtext into a text editor (already done: Open, Save, Crypt)
	* Added menu entrie for Editor

2007-05-31  Maximilien Cuony
	* Gmail: Ask keys BEFORE passparse for sign.
	* Site: Correct a mistake with 'turc'
	* Site: Added the plugin's md5.